fix: Monthly dark mode shows two borders between weeks (#137)

--- a/ui/src/css/calendar-weekly.sass
+++ b/ui/src/css/calendar-weekly.sass
@@ -381,7 +381,6 @@
 
     .q-calendar-weekly__day
       border-right: $calendar-border-color-dark $calendar-border-width solid
-      border-bottom: $calendar-border-color-dark $calendar-border-width solid
       color: $calendar-primary-color-dark
 
       &:last-child
